fix logo aspect ratio on mobile

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,8 @@ nav {
 
 a img {
     width: 100%;
+    height: auto;
+    align-self: center;
 }
 
 nav img {
